# hal

./: Cargo.toml  README.md  shell.nix
lib/: Cargo.toml
lib/boards/: Cargo.toml  README.md
lib/boards/src/: lib.rs
lib/boards/src/boards/: mod.rs
lib/peripherals/: Cargo.toml  README.md
lib/peripherals/src/: lib.rs
lib/peripherals/src/peripherals/: mod.rs
lib/registers/: Cargo.toml  README.md
lib/registers/src/: lib.rs
lib/registers/src/registers/: mod.rs
lib/src/: lib.rs
lib/src/boards/: mod.rs
lib/src/boards/arduino_uno/: uart.rs
lib/src/boards/rpi/: README.md
lib/src/boards/rpi_3/: mod.rs
lib/src/globals/: mod.rs  register.rs  register_32_bits.rs  register_8_bits.rs
lib/src/registers/: mod.rs
lib/src/registers/atmega328p/: atmega328p.csv  mod.rs  register_003_0x03_pinb.rs  register_004_0x04_ddrb.rs  register_005_0x05_portb.rs  register_006_0x06_pinc.rs  register_007_0x07_ddrc.rs  register_008_0x08_portc.rs  register_009_0x09_pind.rs  register_010_0x0a_ddrd.rs  register_011_0x0b_portd.rs  register_021_0x15_tifr0.rs  register_022_0x16_tifr1.rs  register_023_0x17_tifr2.rs  register_027_0x1b_pcifr.rs  register_028_0x1c_eifr.rs  register_029_0x1d_eimsk.rs  register_030_0x1e_gpior0.rs  register_031_0x1f_eecr.rs  register_032_0x20_eedr.rs  register_033_0x21_eearl.rs  register_034_0x22_eearh.rs  register_035_0x23_gtccr.rs  register_036_0x24_tccr0a.rs  register_037_0x25_tccr0b.rs  register_038_0x26_tcnt0.rs  register_039_0x27_ocr0a.rs  register_040_0x28_ocr0b.rs  register_042_0x2a_gpior1.rs  register_043_0x2b_gpior2.rs  register_044_0x2c_spcr.rs  register_045_0x2d_spsr.rs  register_046_0x2e_spdr.rs  register_048_0x30_acsr.rs  register_051_0x33_smcr.rs  register_052_0x34_mcusr.rs  register_053_0x35_mcucr.rs  register_055_0x37_spmcsr.rs  register_061_0x3d_spl.rs  register_062_0x3e_sph.rs  (+48 more)
lib/src/registers/bcm/: mod.rs  register_2097164_0x0020000c_gpfsel3.rs  register_2097168_0x00200010_gpfsel4.rs  register_2097172_0x00200014_gpfsel5.rs  register_2097180_0x0020001c_gpset0.rs  register_2097192_0x00200028_gpclr0.rs  register_2097196_0x0020002c_gpclr1.rs
lib/src/registers/bcm2837/: README.md  mod.rs  register_2097152_0x00200000_gpfsel0.rs  register_2097156_0x00200004_gpfsel1.rs  (+8 more)
toolchains/avr/: Cargo.toml  README.md
toolchains/avr/src/: main.rs
(+195 files in other folders)
