[package]
name = "hal-lib"
version = "0.1.0"
edition = "2024"

[features]
# src/registers
atmega328p = []

bcm2835 = []
bcm2836 = []
bcm2837 = []
rp3a0 = []
bcm2837b0 = []
bcm2711 = []

# src/boards
arduino-uno = ["atmega328p"]

rpi-1a = ["bcm2835"]
rpi-1ap = ["bcm2835"]
rpi-1b = ["bcm2835"]
rpi-1bp = ["bcm2835"]
rpi-cm1 = ["bcm2835"]
rpi-0 = ["bcm2835"]
rpi-0w = ["bcm2835"]

rpi-2b1 = ["bcm2836"]

rpi-2b2 = ["bcm2837"]
rpi-2b3 = ["bcm2837"]
rpi-3b1 = ["bcm2837"]
rpi-cm3 = ["bcm2837"]

rpi-02 = ["rp3a0"]
rpi-02w = ["rp3a0"]

rpi-3b2 = ["bcm2837b0"]
rpi-3ap = ["bcm2837b0"]
rpi-3bp = ["bcm2837b0"]
rpi-cm3p = ["bcm2837b0"]

rpi-4b = ["bcm2711"]
rpi-400 = ["bcm2711"]
rpi-cm4 = ["bcm2711"]
rpi-cm4s = ["bcm2711"]
