[package]
name = "toolchains-avr"
version = "0.1.0"
edition = "2024"

[dependencies]
format_no_std = "1.2.0"
lib-boards = { path = "../../lib/boards", features = ["arduino-uno"] }

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
